corrected overflow issue w/ body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ $epas-pimary-color: red;
 
 body {
   overflow: hidden;
+  padding: 0px 0px 80px 0px;
 }
 
 h3{
